# dbf-dextractor

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  model.rs  parser.rs  value.rs
src/dbf/: field.rs  header.rs  memo.rs  mod.rs  parser.rs  reader.rs  version.rs
src/deserialize/: deserializer.rs  enum_access.rs  map_access.rs  mod.rs  parser.rs
src/deserialize/de/: datetime_access.rs  enum_access.rs  impl_deserializer.rs  map_access.rs  mod.rs
